TD7-Helm/minecraft-app/templates/http-route.yaml
# Requiert d'avoir répété les étapes d'install de Traefik si sur la clé
# Notamment, il faut que la gateway soit sur le namespace par défaut. (kubectl get gateway)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - "minecraft.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: websvc
          port: 80
